[package]
# Project information
name = "puny2d"
version = "0.0.2"
authors = ["Christoph 'Youka' Spanknebel"]
description = "Rusty 2d graphics software renderer library."
# Project type
edition = "2018"
# Documentation
keywords = ["2d", "graphics", "software", "renderer"]
categories = ["graphics", "multimedia::images"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/substation-beta/puny2d"

[lib]
# Compile to Rust static library
crate-type = ["rlib"]
# Documentation embedded code doesn't need tests
doctest = false

[profile.release]
# Link-time-optimization for smaller binaries but longer build time
lto = true
# Just one build thread (=no parallel building) but chance for additional optimization
codegen-units = 1
# No expensive stack unwinding, release should be safe and without bloating
panic = "abort"

[[bench]]
# File to execute
name = "rendering_benches"
# Disable standard benchmarking harness in favor of microbench
harness = false

[dependencies]
# Fonts
font-loader = "~0.11.0"   # https://crates.io/crates/font-loader
ttf-parser = "~0.12.0"   # https://crates.io/crates/ttf-parser
# Images
png = "~0.16.8" # https://crates.io/crates/png
# Acceleration
lru = "~0.6.4" # https://crates.io/crates/lru
rayon = "~1.5.0"    # https://crates.io/crates/rayon

[dev-dependencies]
# Profiling
microbench = "~0.5.0"   # https://crates.io/crates/microbench